Resolve movement logic conflicts

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <canvas height="200" id="game" width="300"></canvas>
 <div id="controls">
 <div>
-<button class="btn" onmousedown="startMove('up')" onmouseup="stopMove()" ontouchend="stopMove()" ontouchstart="startMove('up')">⬆️</button><br/>
-<button class="btn" onmousedown="startMove('left')" onmouseup="stopMove()" ontouchend="stopMove()" ontouchstart="startMove('left')">⬅️</button>
-<button class="btn" onmousedown="startMove('down')" onmouseup="stopMove()" ontouchend="stopMove()" ontouchstart="startMove('down')">⬇️</button>
-<button class="btn" onmousedown="startMove('right')" onmouseup="stopMove()" ontouchend="stopMove()" ontouchstart="startMove('right')">➡️</button>
+<button class="btn" onmousedown="startMove('up')" onmouseup="stopMove('up')" ontouchend="stopMove('up')" ontouchstart="startMove('up')">⬆️</button><br/>
+<button class="btn" onmousedown="startMove('left')" onmouseup="stopMove('left')" ontouchend="stopMove('left')" ontouchstart="startMove('left')">⬅️</button>
+<button class="btn" onmousedown="startMove('down')" onmouseup="stopMove('down')" ontouchend="stopMove('down')" ontouchstart="startMove('down')">⬇️</button>
+<button class="btn" onmousedown="startMove('right')" onmouseup="stopMove('right')" ontouchend="stopMove('right')" ontouchstart="startMove('right')">➡️</button>
 </div>
 </div>
 <audio autoplay="" id="bg-music" loop="" src="assets/music.mp3">
