Fix bottom section markup

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
 </div>
 <audio autoplay="" id="bg-music" loop="" src="assets/music.mp3">
     Your browser does not support the audio element.
-  </audio>
-
+</audio>
 <audio id="pickup-sound" src="assets/flower_pickup.mp3"></audio>
-
-
-<script src="script.js"></script></body>
+<script src="script.js"></script>
+</body>
 </html>
