Add door transition sound, decorations, and desktop view improvements

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     Your browser does not support the audio element.
 </audio>
 <audio id="pickup-sound" src="assets/flower_pickup.mp3"></audio>
+<audio id="door-sound" src="assets/PIXEL CREAKING DOOR.mp3"></audio>
 <script src="script.js"></script>
 </body>
 </html>
