--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Embedded Start Screen Image -->
 <div id="startScreen">
-<img alt="Tap to Start" src="assets/start.png" crossorigin="anonymous"/>
+<img alt="Tap to Start" src="assets/start.png"/>
 </div>
 
 <div id="flower-popup">Flowers Collected!</div>
@@ -27,11 +27,11 @@
 <button class="btn" onmousedown="startMove('right')" onmouseup="stopMove('right')" ontouchend="stopMove('right')" ontouchstart="startMove('right')">➡️</button>
 </div>
 </div>
-<audio autoplay="" id="bg-music" loop="" src="assets/music.mp3" crossorigin="anonymous">
+<audio autoplay="" id="bg-music" loop="" src="assets/music.mp3">
     Your browser does not support the audio element.
 </audio>
-<audio id="pickup-sound" src="assets/flower_pickup.mp3" crossorigin="anonymous"></audio>
-<audio id="door-sound" src="assets/PIXEL CREAKING DOOR.mp3" crossorigin="anonymous"></audio>
+<audio id="pickup-sound" src="assets/flower_pickup.mp3"></audio>
+<audio id="door-sound" src="assets/PIXEL CREAKING DOOR.mp3"></audio>
 <script src="script.js"></script>
 </body>
 </html>
