--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <link href="style.css" rel="stylesheet"/>
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; media-src 'self'; style-src 'self'; script-src 'self'"/>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' file:; img-src 'self' file: data:; media-src 'self' file:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' file:"/>
 <meta http-equiv="X-Content-Type-Options" content="nosniff"/>
 </head>
 <body>
