Add forest music switching

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <audio autoplay="" id="bg-music" loop="" src="assets/music.mp3">
     Your browser does not support the audio element.
 </audio>
+<audio id="forest-music" loop="" src="assets/zelda_style_forest_chiptune.mp3">
+    Your browser does not support the audio element.
+</audio>
 <audio id="pickup-sound" src="assets/flower_pickup.mp3"></audio>
 <audio id="door-sound" src="assets/PIXEL CREAKING DOOR.mp3"></audio>
 <script src="script.js"></script>
