Add forest resource gathering and bridge building

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </div>
 
 <div id="flower-popup">Flowers Collected!</div>
+<div id="inventory"></div>
 <canvas height="200" id="game" width="300"></canvas>
 <div id="controls">
 <div>
